# ddns-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile
etc/: ddns-cpp.json  ddns-cpp.service
lib/: configure.h  current_ip.h  namesilo.h  pihole_api.h  struct.h
src/: configure.cpp  current_ip.cpp  main.cpp  namesilo.cpp  pihole_api.cpp
